cli/tests/error_syntax.js.out
error: Expected Comma, got Some(Word(following)) at [WILDCARD]tests/error_syntax.js:3:5
