cli/tests/error_syntax.js

// prettier-ignore
(the following is a syntax error  ^^ ! )
